--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
     // 1) Configuração do Firebase
     // -----------------------------------
     const firebaseConfig = {
-      apiKey: "SUA_API_KEY",
-      authDomain: "SEU_PROJETO.firebaseapp.com",
-      projectId: "SEU_PROJETO",
-      storageBucket: "SEU_PROJETO.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
+    apiKey: "AIzaSyBUeMiocpr0jeW01gWnllG_uTzXpOfUjj0",
+    authDomain: "htracker-101.firebaseapp.com",
+    projectId: "htracker-101",
+    storageBucket: "htracker-101.firebasestorage.app",
+    messagingSenderId: "77241327034",
+    appId: "1:77241327034:web:325d4f27f194b8a5cdd183"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
