--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
   <h1>Avaliação de Saúde</h1>
-  <p class="subtitle">Responda às perguntas e obtenha um score de 0 a 100, com orientações para seu bem-estar.</p>
+  <p class="subtitle">Responda às perguntas e obtenha um score de 0 a 100, onde notas mais altas indicam melhor bem-estar.</p>
 
   <!-- ETAPA 1: Dados do Usuário -->
   <div id="user-info" class="form-box">
@@ -105,7 +105,7 @@
   <!-- ETAPA 2: Perguntas de Saúde -->
   <div id="assessment" class="form-box">
     <h2>Perguntas de Saúde</h2>
-    <!-- Aqui estão todas as perguntas em bloco único; você pode dividir em etapas se quiser -->
+    <!-- Perguntas em bloco único; você pode dividir em etapas se desejar -->
     <div class="question-block">
       <label for="sexo">1. Qual o seu sexo biológico?</label>
       <select id="sexo">
@@ -225,12 +225,12 @@
     // 1) Configuração do Firebase
     // -----------------------------------
     const firebaseConfig = {
-    apiKey: "AIzaSyBUeMiocpr0jeW01gWnllG_uTzXpOfUjj0",
-    authDomain: "htracker-101.firebaseapp.com",
-    projectId: "htracker-101",
-    storageBucket: "htracker-101.firebasestorage.app",
-    messagingSenderId: "77241327034",
-    appId: "1:77241327034:web:325d4f27f194b8a5cdd183"
+      apiKey: "AIzaSyBUeMiocpr0jeW01gWnllG_uTzXpOfUjj0",
+      authDomain: "htracker-101.firebaseapp.com",
+      projectId: "htracker-101",
+      storageBucket: "htracker-101.firebasestorage.app",
+      messagingSenderId: "77241327034",
+      appId: "1:77241327034:web:325d4f27f194b8a5cdd183"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
@@ -247,14 +247,14 @@
         return;
       }
 
-      // Oculta user-info, exibe assessment
+      // Oculta user-info e exibe assessment
       document.getElementById('user-info').style.display = 'none';
       document.getElementById('assessment').style.display = 'block';
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
     async function submitAnswers() {
-      // Validação simples: verificar se todos os campos estão preenchidos
+      // Validação: verificar se todos os campos foram preenchidos
       const requiredIds = [
         'sexo','idade','altura','peso','calca','dores','atividadeFisica',
         'faltaFolego','dorme','ansiedade','alcool','tabaco','frutasVegetais','fastFood'
@@ -267,7 +267,7 @@
         }
       }
 
-      // Coleta dados
+      // Coleta dos dados
       const answers = {
         nome: document.getElementById('nome').value.trim(),
         email: document.getElementById('email').value.trim(),
@@ -288,7 +288,7 @@
         fastFood: document.getElementById('fastFood').value
       };
 
-      // Calcula score
+      // Calcula score usando a função inversa
       const { scoreFinal, classificacao } = calcularScoreSaude(answers);
 
       // Salva no Firebase
@@ -304,21 +304,21 @@
         console.error("Erro ao salvar no Firestore:", err);
       }
 
-      // Mostra resultado
+      // Exibe resultado
       showResults(scoreFinal, classificacao);
     }
 
     function showResults(score, classification) {
-      // Oculta assessment, exibe results
+      // Oculta assessment e exibe results
       document.getElementById('assessment').style.display = 'none';
       document.getElementById('results-container').style.display = 'block';
       window.scrollTo({ top: 0, behavior: 'smooth' });
 
-      // Atualiza texto
+      // Atualiza textos
       document.getElementById('score-value').innerText = `Score: ${score}/100`;
       document.getElementById('classification').innerText = classification;
 
-      // Cria o Gauge via Highcharts
+      // Cria o Gauge via Highcharts com cores invertidas
       Highcharts.chart('gauge-chart', {
         chart: {
           type: 'solidgauge'
@@ -343,11 +343,12 @@
           max: 100,
           lineWidth: 0,
           tickPositions: [],
+          // Cores invertidas: notas baixas (risco) em vermelho; notas altas (bem estar) em verde.
           stops: [
-            [0.40, '#008000'], // até 40% => verde
-            [0.65, '#a0d911'], // 40-65 => verde claro
-            [0.80, '#ffcc00'], // 65-80 => amarelo
-            [1.00, '#ff0000']  // 80-100 => vermelho
+            [0.40, '#ff0000'],  // até 40 => vermelho (risco)
+            [0.65, '#ffcc00'],  // 40-65 => amarelo (atenção)
+            [0.80, '#a0d911'],  // 65-80 => verde claro (cuidados)
+            [1.00, '#008000']   // 80-100 => verde escuro (bem estar)
           ]
         },
         plotOptions: {
@@ -372,12 +373,10 @@
     }
 
     // -----------------------------------
-    // 3) Função de Cálculo do Score
+    // 3) Função de Cálculo do Score Inverso
     // -----------------------------------
     function calcularScoreSaude(answers) {
-      // Exemplo de lógica genérica, adaptada às suas regras
-      // ----------------------------------------------------------------------
-      // 1) Mapeamento Tamanho Calça -> circunferência (metros)
+      // Mapeamento Tamanho Calça -> circunferência (metros)
       const calcaToCirc = {
         36: 0.72, 38: 0.76, 40: 0.80, 42: 0.84,
         44: 0.88, 46: 0.92, 48: 0.96, 50: 1.00,
@@ -392,23 +391,23 @@
       const calca = parseInt(answers.calca, 10);
       const circ_m = calcaToCirc[calca] || 0;
 
-      // Faixa de idade
+      // Faixa de idade: Pontuação de 0 a 3
       let ageScore = 0;
       if (idade < 35) ageScore = 0;
       else if (idade < 50) ageScore = 1;
       else if (idade < 65) ageScore = 2;
       else ageScore = 3;
 
-      // Cálculo da circunferência
-      // formula = circ_m / (0.109 * sqrt(peso / altura))
+      // Cálculo da circunferência: fórmula = circ_m / (0.109 * sqrt(peso/altura))
       const calc = circ_m / (0.109 * Math.sqrt(peso / altura));
       let circScore = 0;
       if (sexo === "masculino" && calc >= 1.25) circScore = 2;
       if (sexo === "feminino" && calc >= 1.18) circScore = 2;
-      // total 1 a 5 => soma circScore + ageScore
-      const subtotal_5 = circScore + ageScore; // máx 5
 
-      // Pontos perguntas 6 a 14
+      // Subtotal das 5 primeiras perguntas (máximo 5 pontos)
+      const subtotal_5 = circScore + ageScore;
+
+      // Pontuação das perguntas 6 a 14 (cada uma até 2 pontos; máximo 18 pontos)
       const questionPoints = {
         dores: { "Sim": 2, "Não": 0 },
         atividadeFisica: { "Nunca": 2, "1 ou 2 vezes por semana": 1, "3 ou mais vezes por semana": 0 },
@@ -432,20 +431,22 @@
       subtotal_9 += questionPoints.frutasVegetais[answers.frutasVegetais] || 0;
       subtotal_9 += questionPoints.fastFood[answers.fastFood] || 0;
 
-      // total bruto (0 a 23)
+      // Total bruto (0 a 23 pontos)
       const totalBruto = subtotal_5 + subtotal_9;
-      // gera score de 0 a 100
       const maxPossivel = 23;
-      const scoreFinal = Math.round((totalBruto / maxPossivel) * 100);
+      const scoreOriginal = Math.round((totalBruto / maxPossivel) * 100);
 
-      // Classificação
+      // Inversão: scoreInverso = 100 - scoreOriginal, para que notas mais altas indiquem melhor saúde.
+      const scoreInverso = 100 - scoreOriginal;
+
+      // Nova classificação: scoreInverso alto = Bem Estar; baixo = Risco.
       let classificacao;
-      if (scoreFinal < 40) classificacao = "Bem Estar";
-      else if (scoreFinal < 65) classificacao = "Cuidados";
-      else if (scoreFinal < 80) classificacao = "Atenção";
+      if (scoreInverso >= 80) classificacao = "Bem Estar";
+      else if (scoreInverso >= 65) classificacao = "Cuidados";
+      else if (scoreInverso >= 40) classificacao = "Atenção";
       else classificacao = "Risco";
 
-      return { scoreFinal, classificacao };
+      return { scoreFinal: scoreInverso, classificacao };
     }
   </script>
 </body>
